# transfery

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  OSS_minio.py  Pipfile  README.md  app.py  config.py  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  front-end.sh  init.py  minio_progress.py  mysql_db.py  run.py  transfery@.service
.github/workflows/: docker-publish.yml
README/: README.zh_CN.md
modules/: client.py  env.py  socket.py  sql.py  storage.py  utils.py
modules/blueprints/: __init__.py  download.py  login.py  message.py  method.py  upload.py
src/: auth.rs  crypto.rs  env.rs  error.rs  init.rs  main.rs  storage.rs  utils.rs
src/client/: database.rs  mod.rs  storage.rs
src/client/database/: device.rs  init.rs  message.rs  mod.rs  models.rs  tests.rs  token.rs
src/client/database/models/: auth.rs  config.rs  device.rs  message.rs  mod.rs  token.rs
src/client/storage/: download.rs  init.rs  list.rs  mod.rs  models.rs  remove.rs  tests.rs  upload.rs  utils.rs
src/client/storage/local/: download.rs  init.rs  mod.rs  models.rs  remove.rs  tests.rs  upload.rs  utils.rs
src/client/storage/minio/: download.rs  init.rs  list.rs  mod.rs  remove.rs  tests.rs  upload.rs
src/handler/: api.rs  download.rs  index.rs  login.rs  message.rs  mod.rs  socket.rs  upload.rs
src/handler/admin/: mod.rs  models.rs  tests.rs
src/handler/api/: mod.rs  models.rs  tests.rs
src/handler/download/: mod.rs  models.rs  tests.rs
src/handler/login/: mod.rs  models.rs  tests.rs
src/handler/message/: mod.rs  models.rs  tests.rs
src/handler/socket/: mod.rs  models.rs  tests.rs
src/handler/upload/: mod.rs  models.rs  tests.rs
src/socketio/: lobby.rs  message.rs  mod.rs  start_connection.rs  ws.rs
static/: index-CmDjFnKI.js  index-kgXGNnVb.css  index.css  index.js
static/css/: app.25c78413934e04413269a9929b65e440.css  app.25c78413934e04413269a9929b65e440.css.map  app.3e385c5d32f3a0926502e1595469b558.css  app.3e385c5d32f3a0926502e1595469b558.css.map  app.426b282ed566311c71b56282718b7625.css  app.426b282ed566311c71b56282718b7625.css.map  app.4f79f605b5cb5565f7b0ab1740d536f5.css  app.4f79f605b5cb5565f7b0ab1740d536f5.css.map  app.5ced24bb8f8aace4bcd5c08812e6ac83.css  app.5ced24bb8f8aace4bcd5c08812e6ac83.css.map  app.6fcfe138e53baa3ad9de856e15562537.css  app.6fcfe138e53baa3ad9de856e15562537.css.map  app.71e70728797f89643732ca64d65cd2e4.css  app.71e70728797f89643732ca64d65cd2e4.css.map  app.8046c9b8aa64e07cdf2497e48d9b6033.css  app.8046c9b8aa64e07cdf2497e48d9b6033.css.map  app.8b0f2be74490469856d6cbb9fad53cd7.css  app.8b0f2be74490469856d6cbb9fad53cd7.css.map  app.91b181be735019fd023eec2df64b121e.css  app.91b181be735019fd023eec2df64b121e.css.map  app.c025f1c693e70d1cf6f51e5ba924c5e4.css  app.c025f1c693e70d1cf6f51e5ba924c5e4.css.map  app.c4fee9e8c7c9a697c14af302b9a4b8e6.css  app.c4fee9e8c7c9a697c14af302b9a4b8e6.css.map  app.c636ec62a49672b79719da08f1d217b7.css  app.c636ec62a49672b79719da08f1d217b7.css.map  app.e1da4fcdf8ba3fe7432af9590ed3b72d.css  app.e1da4fcdf8ba3fe7432af9590ed3b72d.css.map  app.ff855ba0d26ad702b49402ec0182b1a5.css  app.ff855ba0d26ad702b49402ec0182b1a5.css.map
static/js/: app.0155cbb7a2f681c667ac.js  app.0155cbb7a2f681c667ac.js.map  app.06f681e7aefd7de19dee.js  app.06f681e7aefd7de19dee.js.map  app.0e637d82119ba7df1a73.js  app.0e637d82119ba7df1a73.js.map  app.0efd459252849b8580ef.js  app.0efd459252849b8580ef.js.map  app.100a7161a5ae15520629.js  app.100a7161a5ae15520629.js.map  app.21dbbc4b81ae373e0dbd.js  app.21dbbc4b81ae373e0dbd.js.map  app.3228facaca87122771a8.js  app.3228facaca87122771a8.js.map  app.3dd91ca01c9b802d73e3.js  app.3dd91ca01c9b802d73e3.js.map  app.4176165b18b6368e0f6e.js  app.4176165b18b6368e0f6e.js.map  app.49d3cda0b41ca3133699.js  app.49d3cda0b41ca3133699.js.map  app.4edc5a0ca6068b66c29e.js  app.4edc5a0ca6068b66c29e.js.map  app.569d1cc5ea92386393d7.js  app.569d1cc5ea92386393d7.js.map  app.58c0c57497cd04091140.js  app.58c0c57497cd04091140.js.map  app.5c30a413c58318dd0ecb.js  app.5c30a413c58318dd0ecb.js.map  app.7ae1ab511b62e0aef373.js  app.7ae1ab511b62e0aef373.js.map  app.7e6db01a5a05be39ad11.js  app.7e6db01a5a05be39ad11.js.map  app.8cf0cbb651ea616978e1.js  app.8cf0cbb651ea616978e1.js.map  app.91be4dfa51234b193ceb.js  app.91be4dfa51234b193ceb.js.map  app.93431c686083f96f5140.js  app.93431c686083f96f5140.js.map  app.9eb0bf44992ee6cf0fb3.js  app.9eb0bf44992ee6cf0fb3.js.map  (+40 more)
templates/: index.html
