[package]
name = "transfery"
version = "5.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1
opt-level = 'z'

[dependencies]
sea-orm = { version = "0.12.15", default-features = false, features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
axum = { version = "0.7.5", default-features = false, features = [
    "tokio",
    "http1",
    "json",
    "query",
    "multipart",
    "macros",
] }
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.37", default-features = false }
http = { version = "0.2.12", default-features = false }
minio = { git = "https://github.com/hlf20010508/minio-rs", branch = "transfery", default-features = false }
pico-args = { version = "0.5.0", default-features = false, features = [
    "short-space-opt",
] }
rand = { version = "0.8.5", default-features = false }
ring = { version = "0.17.8", default-features = false }
sanitize-filename = { version = "0.5.0", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.115", default-features = false }
socketioxide = { version = "0.13.1", default-features = false, features = [
    "state",
    "tracing",
] }
tokio = { version = "1.38.0", default-features = false, features = ["fs"] }
tower-http = { version = "0.5.2", default-features = false, features = ["fs"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "std",
    "registry",
    "fmt",
    "env-filter",
] }
tokio-util = { version = "0.7.11", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["v4"] }
md5 = { version = "0.7.0", default-features = false }

[dev-dependencies]
dotenv = { version = "0.15.0", default-features = false }
tower = { version = "0.4.13", default-features = false }
http-body-util = { version = "0.1.1", default-features = false }
rust_socketio = { version = "0.6.0", default-features = false, features = [
    "async",
] }
futures = { version = "0.3.30", default-features = false }
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
strum_macros = { version = "0.26.4", default-features = false }
